<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newInventory">New Inventory</string>
    <string name="retired">Retire Inventory</string>
    <string name="remove">Remove Inventory</string>
    <string name="title_activity_new_inventory">NewInventory</string>
    <string name="title_activity_retire">Retire</string>
    <string name="title_activity_remove">Remove</string>
    
    
    
    
    
     <string name="date">Date</string>
    <string name="mod">Model #</string>
    <string name="serial">Serial #</string>
    <string name="unit">Unit #</string>
     <string name="send">Send</string>
   
     
     <string name="brand">Brand</string>
     <string name="applianceType">Appliance Type</string>

</resources>
