<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventorymanager.InventorySelection"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/newB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newInventory" />

        <Button
            android:id="@+id/retireB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retired" />

        <Button
            android:id="@+id/removeB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove" />

    </LinearLayout>

</FrameLayout>

