<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventorymanager.NewInventory"
    tools:ignore="MergeRootFrame" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/brandTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand" />

            <EditText
                android:id="@+id/brandED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/modTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod" />

            <EditText
                android:id="@+id/modED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/serialTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial" />

            <EditText
                android:id="@+id/serialED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/unitTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit" />

            <EditText
                android:id="@+id/unitED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/dateED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/applinacetypeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applianceType" />

            <EditText
                android:id="@+id/apED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <Button
            android:id="@+id/sendB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <EditText
            android:id="@+id/displayED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:ems="10"
            android:inputType="textMultiLine" />
    </TableLayout>

</FrameLayout>

